# SC25-pap506s2-AD

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  sddmm.cu  spmm.cu
data/gnn/: PROTEINS_full.csr  citeseer.csr  cora.csr  ppi.csr  pubmed.csr
scripts/: download_mtx.sh  namelist.txt  run_gnn.sh  run_mtx.sh
thunder/: CMakeLists.txt  thunder.h
thunder/core/: constants.h  macros.h  memory.h  traits.h  types.h
thunder/core/compute/: arithmetic.h  bitwise.h  fragments.h  intrinsics.h
thunder/cusparse/: sddmm.h  spmm.h
thunder/formats/: bitcoo.h  bitcsr.h  bitshr.h  coo.h  csr.h  dense.h  shr.h
thunder/operations/: sddmm.h  spmm.h
thunder/transforms/: convert.h  reorder.h  shrink.h
thunder/utils/: csr_helpers.h  option.h  precision.h  random.h  report.h  timer.h
thunder/utils/functors/: bitmap_ops.h  matrix_ops.h  predicate_ops.h
thunder/utils/io/: read.h  write.h
