cmake_minimum_required(VERSION 3.22)
project(bmp_spmm)

set(BMP_SPMM_VERSION_MAJOR 0)
set(BMP_SPMM_VERSION_MAJOR 1)
set(PROJECT_VERSION "${BMP_SPMM_VERSION_MAJOR}.${BMP_SPMM_VERSION_MINOR}")

enable_language(CUDA CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CUDA_STANDARD 20)
set(CMAKE_CUDA_ARCHITECTURES 80)
set(CUDA_SEPARABLE_COMPILATION ON)
set(CUDA_PROPAGATE_HOST_FLAGS ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

add_definitions(-DTHRUST_HOST_SYSTEM=THRUST_HOST_SYSTEM_OMP)

find_package(OpenMP REQUIRED)
find_package(CUDAToolkit REQUIRED)

add_subdirectory(thunder)
add_subdirectory(apps)
